--- a/fxk-boot-canal/fxk-boot-starter-canal/fxk-boot-starter-canal-mqbroker-rocket/pom.xml
+++ b/fxk-boot-canal/fxk-boot-starter-canal/fxk-boot-starter-canal-mqbroker-rocket/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>fxk-boot-starter-canal</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
+        <artifactId>fxk-boot-starter-canal</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-starter-canal-mqbroker-rocket</artifactId>
-
+    <name>FXK Boot Starter Canal MQ Broker Rocket</name>
+    <description>FXK Boot Starter Canal MQ Broker Rocket</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
