--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -30,7 +30,7 @@
         <revision>2.2.7-SNAPSHOT</revision>
         <spring-boot-dependencies.version>2.2.7.RELEASE</spring-boot-dependencies.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
-        <xxl-mq-client.version>1.3.0-SNAPSHOT</xxl-mq-client.version>
+        <runlion-xxl-mq-client.version>1.3.0-SNAPSHOT</runlion-xxl-mq-client.version>
         <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
@@ -38,6 +38,18 @@
         <flatten-maven-plugin.version>1.1.0</flatten-maven-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+        <fanxuankai-commons.version>1.0-SNAPSHOT</fanxuankai-commons.version>
+        <fanxuankai-canal-dependencies.version>1.1.4-SNAPSHOT</fanxuankai-canal-dependencies.version>
+        <sharding-jdbc-self-id-generator.version>1.4.1</sharding-jdbc-self-id-generator.version>
+        <fxk-spring-dependencies.version>5.2.6-SNAPSHOT</fxk-spring-dependencies.version>
+        <alibaba-dingtalk-service-sdk.version>1.0.1</alibaba-dingtalk-service-sdk.version>
+        <redisson-spring-boot-starter.version>3.12.4</redisson-spring-boot-starter.version>
+        <jmockdata.version>4.2.0</jmockdata.version>
+        <rocketmq-spring-boot-starter.version>2.1.0</rocketmq-spring-boot-starter.version>
+        <guava.version>29.0-jre</guava.version>
+        <javassist.version>3.27.0-GA</javassist.version>
+        <xxl-mq-client.version>1.2.2</xxl-mq-client.version>
+        <springfox.version>3.0.0</springfox.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -51,71 +63,71 @@
             <dependency>
                 <groupId>com.fanxuankai</groupId>
                 <artifactId>commons</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${fanxuankai-commons.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fanxuankai.canal</groupId>
                 <artifactId>canal-dependencies</artifactId>
-                <version>1.1.4-SNAPSHOT</version>
+                <version>${fanxuankai-canal-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.dangdang</groupId>
                 <artifactId>sharding-jdbc-self-id-generator</artifactId>
-                <version>1.4.1</version>
+                <version>${sharding-jdbc-self-id-generator.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fanxuankai.spring</groupId>
                 <artifactId>fxk-spring-dependencies</artifactId>
-                <version>5.2.6-SNAPSHOT</version>
+                <version>${fxk-spring-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>alibaba-dingtalk-service-sdk</artifactId>
-                <version>1.0.1</version>
+                <version>${alibaba-dingtalk-service-sdk.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.runlion</groupId>
                 <artifactId>xxl-mq-client</artifactId>
-                <version>${xxl-mq-client.version}</version>
+                <version>${runlion-xxl-mq-client.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.runlion</groupId>
                 <artifactId>xxl-mq-boot-starter</artifactId>
-                <version>${xxl-mq-client.version}</version>
+                <version>${runlion-xxl-mq-client.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
-                <version>3.12.4</version>
+                <version>${redisson-spring-boot-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.jsonzou</groupId>
                 <artifactId>jmockdata</artifactId>
-                <version>4.2.0</version>
+                <version>${jmockdata.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-spring-boot-starter</artifactId>
-                <version>2.1.0</version>
+                <version>${rocketmq-spring-boot-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>29.0-jre</version>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
-                <version>3.27.0-GA</version>
+                <version>${javassist.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.xuxueli</groupId>
                 <artifactId>xxl-mq-client</artifactId>
-                <version>1.2.2</version>
+                <version>${xxl-mq-client.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -135,12 +147,12 @@
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-oas</artifactId>
-                <version>3.0.0</version>
+                <version>${springfox.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
-                <version>3.0.0</version>
+                <version>${springfox.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fanxuankai.boot</groupId>
@@ -402,7 +414,6 @@
                 <artifactId>fxk-boot-starter-mybatis-plus</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>com.fanxuankai.boot</groupId>
                 <artifactId>fxk-boot-redis-autoconfigure</artifactId>
