--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -28,7 +28,7 @@
     </scm>
     <properties>
         <revision>2.4.0-SNAPSHOT</revision>
-        <spring-boot-dependencies.version>2.4.0.RELEASE</spring-boot-dependencies.version>
+        <spring-boot-dependencies.version>2.4.0</spring-boot-dependencies.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
         <runlion-xxl-mq-client.version>1.3.0-SNAPSHOT</runlion-xxl-mq-client.version>
         <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
