--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -27,8 +27,8 @@
         <url>https://github.com/fanxuankai/fxk-boot</url>
     </scm>
     <properties>
-        <revision>2.2.7-SNAPSHOT</revision>
-        <spring-boot-dependencies.version>2.2.7.RELEASE</spring-boot-dependencies.version>
+        <revision>2.4.0-SNAPSHOT</revision>
+        <spring-boot-dependencies.version>2.4.0</spring-boot-dependencies.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
         <runlion-xxl-mq-client.version>1.3.0-SNAPSHOT</runlion-xxl-mq-client.version>
         <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
@@ -41,7 +41,7 @@
         <fanxuankai-commons.version>1.0-SNAPSHOT</fanxuankai-commons.version>
         <fanxuankai-canal-dependencies.version>1.1.4-SNAPSHOT</fanxuankai-canal-dependencies.version>
         <sharding-jdbc-self-id-generator.version>1.4.1</sharding-jdbc-self-id-generator.version>
-        <fxk-spring-dependencies.version>5.2.6-SNAPSHOT</fxk-spring-dependencies.version>
+        <fxk-spring-dependencies.version>5.3.1-SNAPSHOT</fxk-spring-dependencies.version>
         <alibaba-dingtalk-service-sdk.version>1.0.1</alibaba-dingtalk-service-sdk.version>
         <redisson-spring-boot-starter.version>3.12.4</redisson-spring-boot-starter.version>
         <jmockdata.version>4.2.0</jmockdata.version>
