--- a/fxk-boot-redis/fxk-boot-redis-autoconfigure/pom.xml
+++ b/fxk-boot-redis/fxk-boot-redis-autoconfigure/pom.xml
@@ -27,8 +27,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
