--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-elasticsearch/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-elasticsearch/src/main/resources/application.yml
@@ -2,14 +2,14 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/canal_client_example?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: HzB!OPxxE$5CwJIZ
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 canal:
   elasticsearch:
     enabled: true
     configuration:
       instance: canalEsExample
-      filter: canal_client_example.t_product,canal_client_example.t_product_attribute
+      filter: canal_client_example.t_product,canal_client_example.t_product_attribute,canal_client_example.t_attribute
       show-event-log: true
       show-entry-log: true
 elasticsearch:
