--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mqbroker-kafka/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mqbroker-kafka/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/canal_client_example?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: HzB!OPxxE$5CwJIZ
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 canal:
   mq:
