--- a/fxk-boot-starter-enum/pom.xml
+++ b/fxk-boot-starter-enum/pom.xml
@@ -30,5 +30,10 @@
             <groupId>com.fanxuankai</groupId>
             <artifactId>commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
