--- a/fxk-boot-starter-websocket/pom.xml
+++ b/fxk-boot-starter-websocket/pom.xml
@@ -10,6 +10,8 @@
         <relativePath>../fxk-boot-parent</relativePath>
     </parent>
     <artifactId>fxk-boot-starter-websocket</artifactId>
+    <name>FXK Boot Starter WebSocket</name>
+    <description>FXK Boot Starter WebSocket</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
