--- a/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server-sample/pom.xml
+++ b/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server-sample/pom.xml
@@ -20,5 +20,9 @@
             <groupId>com.fanxuankai.boot</groupId>
             <artifactId>fxk-boot-starter-admin</artifactId>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 </project>
