--- a/fxk-boot-canal/fxk-boot-canal-mq-autoconfigure/pom.xml
+++ b/fxk-boot-canal/fxk-boot-canal-mq-autoconfigure/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-canal</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
     </parent>
     <artifactId>fxk-boot-canal-mq-autoconfigure</artifactId>
     <name>FXK Boot Canal MQ Autoconfigure</name>
