--- a/fxk-boot-canal/fxk-boot-starter-canal-mqbroker-kafka/pom.xml
+++ b/fxk-boot-canal/fxk-boot-starter-canal-mqbroker-kafka/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-canal</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
     </parent>
     <artifactId>fxk-boot-starter-canal-mqbroker-kafka</artifactId>
     <name>FXK Boot Starter Canal MQ Broker Kafka</name>
