--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mqbroker-rabbit/pom.xml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mqbroker-rabbit/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>fxk-boot-test-canal</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
     </parent>
     <artifactId>fxk-boot-test-canal-mqbroker-rabbit</artifactId>
     <name>FXK Boot Test Canal MQ Broker Rabbit</name>
