--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-xxlmq/pom.xml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-xxlmq/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-test-canal</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>fxk-boot-test-canal-xxlmq</artifactId>
