--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.fanxuankai.boot</groupId>
     <artifactId>fxk-boot-dependencies</artifactId>
-    <version>${revision}</version>
+    <version>2.2.7.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>FXK Boot Dependencies</name>
     <description>FXK Boot Dependencies</description>
