--- a/fxk-boot-example/fxk-boot-starter-generator-example/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-generator-example/pom.xml
@@ -6,12 +6,13 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-example</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
     </parent>
     <artifactId>fxk-boot-starter-generator-example</artifactId>
     <name>FXK Boot Starter Generator Example</name>
     <description>FXK Boot Starter Generator Example</description>
     <properties>
+        <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
     <dependencies>
