--- a/fxk-boot-example/pom.xml
+++ b/fxk-boot-example/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-parent</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
         <relativePath>../fxk-boot-parent</relativePath>
     </parent>
     <artifactId>fxk-boot-example</artifactId>
@@ -14,6 +14,7 @@
     <name>FXK Boot Example</name>
     <description>FXK Boot Example</description>
     <properties>
+        <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
     <modules>
