--- a/fxk-boot-mqbroker/fxk-boot-test-mqbroker/pom.xml
+++ b/fxk-boot-mqbroker/fxk-boot-test-mqbroker/pom.xml
@@ -6,13 +6,14 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-mqbroker</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
     </parent>
     <artifactId>fxk-boot-test-mqbroker</artifactId>
     <packaging>pom</packaging>
     <name>FXK Boot Test MQ Broker</name>
     <description>FXK Boot Test MQ Broker</description>
     <properties>
+        <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
     <modules>
