--- a/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server/pom.xml
+++ b/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-security-oauth2</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
     </parent>
     <artifactId>fxk-boot-starter-authorization-server</artifactId>
     <name>FXK Boot Starter Authorization Server</name>
