--- a/fxk-boot-security-oauth2/fxk-boot-starter-resource-server/pom.xml
+++ b/fxk-boot-security-oauth2/fxk-boot-starter-resource-server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>fxk-boot-security-oauth2</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
     </parent>
     <artifactId>fxk-boot-starter-resource-server</artifactId>
     <name>FXK Boot Starter Oauth2 Resource</name>
