--- a/fxk-boot-security-oauth2/pom.xml
+++ b/fxk-boot-security-oauth2/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-parent</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
         <relativePath>../fxk-boot-parent</relativePath>
     </parent>
     <artifactId>fxk-boot-security-oauth2</artifactId>
