--- a/fxk-boot-starter-distributed-lock/pom.xml
+++ b/fxk-boot-starter-distributed-lock/pom.xml
@@ -6,11 +6,10 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-parent</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
         <relativePath>../fxk-boot-parent</relativePath>
     </parent>
     <artifactId>fxk-boot-starter-distributed-lock</artifactId>
-    <packaging>pom</packaging>
     <name>FXK Boot Starter Distributed Lock</name>
     <description>FXK Boot Starter Distributed Lock</description>
     <dependencies>
@@ -29,6 +28,10 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fanxuankai</groupId>
+            <artifactId>commons</artifactId>
         </dependency>
     </dependencies>
 </project>
