--- a/fxk-boot-starter-enum/pom.xml
+++ b/fxk-boot-starter-enum/pom.xml
@@ -6,13 +6,21 @@
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-parent</artifactId>
-        <version>${revision}</version>
+        <version>2.2.7.1-SNAPSHOT</version>
         <relativePath>../fxk-boot-parent</relativePath>
     </parent>
     <artifactId>fxk-boot-starter-enum</artifactId>
     <name>FXK Boot Starter Enum</name>
     <description>FXK Boot Starter Enum</description>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure-processor</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
             <artifactId>fxk-boot-starter-mybatis-plus</artifactId>
