--- a/fxk-boot-starter-admin/pom.xml
+++ b/fxk-boot-starter-admin/pom.xml
@@ -14,6 +14,14 @@
     <description>FXK Boot Starter Admin</description>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure-processor</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fanxuankai</groupId>
             <artifactId>commons</artifactId>
         </dependency>
@@ -44,6 +52,10 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
         </dependency>
     </dependencies>
 </project>
