--- a/fxk-boot-example/fxk-boot-starter-generator-example/src/main/resources/application.yml
+++ b/fxk-boot-example/fxk-boot-starter-generator-example/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 # 代码生成配置
 code-generator:
+  # 激活
+  enabled: true
   # 数据库
   schema: code_generator
   # 需要生成的表
